<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Game">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="25dp">

        <TextView
            android:id="@+id/txtNumberRandom"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/str_no_number_three_digit"
            android:textSize="45sp"
            android:background="@drawable/border_text"
            android:layout_marginEnd="25dp"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnGenerateNumber"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:padding="20dp"
            android:text="@string/str_generate_number"
            android:textSize="25sp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:paddingHorizontal="25dp">

        <TextView
            android:id="@+id/txtTypeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_hint"
            android:textSize="22sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/txtHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_hints_no_number"
            android:background="@drawable/border_text"
            android:padding="20dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/txtAttempts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_quantity_attempts"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/edtNumber"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/str_hint_number"
            android:inputType="number"
            android:padding="15dp"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnPlay"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/str_play"
            android:textSize="20sp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="25dp">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/str_back"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginEnd="25dp"/>

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/str_restart"
            android:textSize="20sp"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>